@@ -67,7 +67,7 @@ sum_images(const char *fspec, const CMATRIX *cv, FILE *fout)
 			error(SYSTEM, errmsg);
 		}
 		dt = DTfromHeader;
-		if ((err = cm_getheader(&dt, NULL, NULL, NULL, fp)) != NULL)
+		if ((err = cm_getheader(&dt, NULL, NULL, NULL, NULL, fp)) != NULL)
 			error(USER, err);
 		if ((dt != DTrgbe) & (dt != DTxyze) ||
 				!fscnresolu(&xr, &yr, fp)) {
